==> mbed-ce/mbed-os/targets/TARGET_NXP/TARGET_MCUXpresso_MCUS/TARGET_LPC/i2c_api.c <==
#include "mbed_assert.h"
#include "i2c_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "fsl_i2c.h"
#include "PeripheralPins.h"
#define I2C_INIT_DIRECT i2c_init_direct
#define I2C_INIT_DIRECT _i2c_init_direct

void i2c_init(i2c_t *obj, PinName sda, PinName scl)
{
    uint32_t i2c_sda = pinmap_peripheral(sda, PinMap_I2C_SDA);
    uint32_t i2c_scl = pinmap_peripheral(scl, PinMap_I2C_SCL);

    int peripheral = (int)pinmap_merge(i2c_sda, i2c_scl);

    int sda_function = (int)pinmap_find_function(sda, PinMap_I2C_SDA);
    int scl_function = (int)pinmap_find_function(scl, PinMap_I2C_SCL);

    const i2c_pinmap_t explicit_i2c_pinmap = {peripheral, sda, sda_function, scl, scl_function};

    I2C_INIT_DIRECT(obj, &explicit_i2c_pinmap);
}

int i2c_stop(i2c_t *obj)
{
    I2C_Type *base = i2c_addrs[obj->instance];
    uint32_t status;

    do {
        status = I2C_GetStatusFlags(base);
    } while ((status & I2C_STAT_MSTPENDING_MASK) == 0);

    /* Clear controller state. */
    I2C_MasterClearStatusFlags(base, I2C_STAT_MSTARBLOSS_MASK | I2C_STAT_MSTSTSTPERR_MASK);

    base->MSTCTL = I2C_MSTCTL_MSTSTOP_MASK;

    do {
        status = I2C_GetStatusFlags(base);
    } while ((status & I2C_STAT_MSTPENDING_MASK) == 0);

    obj->issue_start = 0;

    return 0;
}

void i2c_frequency(i2c_t *obj, int hz)
{
    I2C_MasterSetBaudRate(i2c_addrs[obj->instance], hz, 12000000);
}

int i2c_read(i2c_t *obj, int address, char *data, int length, int stop)
{
    I2C_Type *base = i2c_addrs[obj->instance];
    i2c_master_transfer_t master_xfer;

    memset(&master_xfer, 0, sizeof(master_xfer));
    master_xfer.slaveAddress = address >> 1;
    master_xfer.direction = kI2C_Read;
    master_xfer.data = (uint8_t *)data;
    master_xfer.dataSize = length;
    if (obj->next_repeated_start) {
        master_xfer.flags |= kI2C_TransferRepeatedStartFlag;
    }
    if (!stop) {
        master_xfer.flags |= kI2C_TransferNoStopFlag;
    }
    obj->next_repeated_start = master_xfer.flags & kI2C_TransferNoStopFlag ? 1 : 0;

    if (I2C_MasterTransferBlocking(base, &master_xfer) != kStatus_Success) {
        return I2C_ERROR_NO_SLAVE;
    }

    return length;
}

int i2c_write(i2c_t *obj, int address, const char *data, int length, int stop)
{
    I2C_Type *base = i2c_addrs[obj->instance];
    i2c_master_transfer_t master_xfer;

    if (length == 0) {
        if (I2C_MasterStart(base, address >> 1, kI2C_Write) != kStatus_Success) {
            return I2C_ERROR_NO_SLAVE;
        }

        if (((I2C_GetStatusFlags(base) & I2C_STAT_MSTSTATE_MASK) >> I2C_STAT_MSTSTATE_SHIFT) == I2C_STAT_MSTCODE_NACKADR) {
            i2c_stop(obj);
            return I2C_ERROR_NO_SLAVE;
        } else {
            i2c_stop(obj);
            return length;
        }
    }

    memset(&master_xfer, 0, sizeof(master_xfer));
    master_xfer.slaveAddress = address >> 1;
    master_xfer.direction = kI2C_Write;
    master_xfer.data = (uint8_t *)data;
    master_xfer.dataSize = length;
    if (obj->next_repeated_start) {
        master_xfer.flags |= kI2C_TransferRepeatedStartFlag;
    }
    if (!stop) {
        master_xfer.flags |= kI2C_TransferNoStopFlag;
    }
    obj->next_repeated_start = master_xfer.flags & kI2C_TransferNoStopFlag ? 1 : 0;

    if (I2C_MasterTransferBlocking(base, &master_xfer) != kStatus_Success) {
        return I2C_ERROR_NO_SLAVE;
    }

    return length;
}

int i2c_byte_write(i2c_t *obj, int data)
{
    I2C_Type *base = i2c_addrs[obj->instance];
    uint32_t status;
    int ret_value = 1;

    // write the data
    base->MSTDAT = data;

    do {
        status = I2C_GetStatusFlags(base);
    } while ((status & I2C_STAT_MSTPENDING_MASK) == 0);

    /* Clear controller state. */
    I2C_MasterClearStatusFlags(base, I2C_STAT_MSTARBLOSS_MASK | I2C_STAT_MSTSTSTPERR_MASK);

    if (obj->issue_start) {
        base->MSTCTL = I2C_MSTCTL_MSTSTART_MASK;
        /* Clear the flag */
        obj->issue_start = 0;
    } else {
        base->MSTCTL = I2C_MSTCTL_MSTCONTINUE_MASK;
    }

    do {
        status = I2C_GetStatusFlags(base);
    } while ((status & I2C_STAT_MSTPENDING_MASK) == 0);

    /* Check if arbitration lost */
    if (status & I2C_STAT_MSTARBLOSS_MASK) {
        I2C_MasterClearStatusFlags(base, I2C_STAT_MSTARBLOSS_MASK);
        ret_value = 2;
    }

    /* Check if no acknowledgement (NAK) */
    if (((status & I2C_STAT_MSTSTATE_MASK) >> I2C_STAT_MSTSTATE_SHIFT) == I2C_STAT_MSTCODE_NACKDAT) {
        ret_value = 0;
    }

    return ret_value;
}

void i2c_slave_mode(i2c_t *obj, int enable_slave)
{
    i2c_slave_config_t slave_config;
    I2C_SlaveGetDefaultConfig(&slave_config);
    slave_config.enableSlave = (bool)enable_slave;

    I2C_SlaveInit(i2c_addrs[obj->instance], &slave_config, 12000000);
}

int i2c_slave_receive(i2c_t *obj)
{
    uint32_t status_flags = I2C_GetStatusFlags(i2c_addrs[obj->instance]);

    if (status_flags & kI2C_SlaveSelected) {
        if (((status_flags & I2C_STAT_SLVSTATE_MASK) >> I2C_STAT_SLVSTATE_SHIFT) == 0x1) {
            // read addressed
            return 1;
        } else {
            // write addressed
            return 3;
        }
    } else {
        // slave not addressed
        return 0;
    }
}

void i2c_slave_address(i2c_t *obj, int idx, uint32_t address, uint32_t mask)
{
    if ((idx >= 0) && (idx <= 3)) {
        I2C_SlaveSetAddress(i2c_addrs[obj->instance], (i2c_slave_address_register_t)idx, address, false);
    }
}
